13-04-2005 Qball <qball@qballcow.nl>
	* src/playlist3.c:	Implemented xmms like search in playlist..
	(tokenized non case sens.)
	* libmpd.c:		Implemented Client side sorting of artists
	(for old mpd users.. needs testing
	* main.c:		Removed connecting before gtk_main. somehow
	this goes wrong.. (connection closed?) now after default 5 seconds
	timeout.. (needs to be chnaged)

11-04-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Implemented auto-scroll to playiing song.
	* src/playlist3.c:	fixed height mode implemented..  need testing.
	* src/playlist3.c:	Another memory leak or 2.
	* src/playlist3.c:	Fixed 2 memory leaks in find and file view browse
	functions.
	* src/playlist3.[c|glade]:	Implemented a database search that
	searches through all fields and tokenized. (with regex support in tokens)
	(murder|moani) John Lee  matches  John Lee hooker Murder  or John Moan
	Hooker Lee.

09-04=2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Return of the TreeFilter.. now with regex
	support.

27-03-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Add an add location to the playlist right
	mouse menu.
	* src/tray-icon.c:	Ctrl-click now pause/play's aswell.
	* src/tray-icon.c:	Extra check so it won't resize < 0

old:	Qball <Qball@qballcow.nl>
	* fix for not drawn section of main window

17-03-2005 Qball <Qball@qballcow.nl>
	* src/libmpd.[c|h]:	possible fix for tracking db updates.
	* src/main.c:		possible fix for tracking db. adding db change
	handle.
	* Fix for autotools. thanks to Eric Wong.
	* Fix for bug that doesnt remove songid = 0;
	* src/libmpd.c:		Fixed songid = 0;

08-03-2005 Qball <Qball@qballcow.nl>
	* src/open-location.c:	Fixed crash. (check for memory leaks. (memprof
	crashes).
	* src/config.c:		Fix severall memory leaks.
	* src/osb-browser.c:	Fix memory leak.	
	* src/main.c:		Fixed bug #379. on connect error dialog is
	destroyed.
	* src/playlist3.c:	Fix for bug #378. It checks for strlen first.
	* src/playlist3.c:	find is inactive if entry is empty.